{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 30,
  "lineage": "66dce0f1-741e-616e-b72d-8ca2b513b477",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shwa_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:047719640457:instance/i-02c22f34242358ba7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c22f34242358ba7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03644384ace53e26f"
              }
            ],
            "primary_network_interface_id": "eni-03644384ace53e26f",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_ip": "54.221.179.140",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f85438c81e6db237",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d17d7b0c6ace12cf",
            "tags": {
              "Name": "SHWA_Instance"
            },
            "tags_all": {
              "Name": "SHWA_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e20df77e8459dc9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "i-02c22f34242358ba7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.shwa_subnet",
            "aws_vpc.shwa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group/sg-05e20df77e8459dc9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-05e20df77e8459dc9",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "047719640457",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c11d3ddcb3ba50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sg-05e20df77e8459dc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shwa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shwa_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:subnet/subnet-0d17d7b0c6ace12cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d17d7b0c6ace12cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719640457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SHWA_Subnet"
            },
            "tags_all": {
              "Name": "SHWA_Subnet"
            },
            "vpc_id": "vpc-06c11d3ddcb3ba50f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "subnet-0d17d7b0c6ace12cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shwa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shwa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:vpc/vpc-06c11d3ddcb3ba50f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b511e338fc6774ec",
            "default_route_table_id": "rtb-01824c373dfd0a25e",
            "default_security_group_id": "sg-09144414538feebe1",
            "dhcp_options_id": "dopt-03b320afe80c2c1f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c11d3ddcb3ba50f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01824c373dfd0a25e",
            "owner_id": "047719640457",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group-rule/sgr-09270ea72d3de7003",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09270ea72d3de7003",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05e20df77e8459dc9",
            "security_group_rule_id": "sgr-09270ea72d3de7003",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sgr-09270ea72d3de7003",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.shwa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group-rule/sgr-0141b74dc0905155d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0141b74dc0905155d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05e20df77e8459dc9",
            "security_group_rule_id": "sgr-0141b74dc0905155d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sgr-0141b74dc0905155d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.shwa_vpc"
          ]
        }
      ]
    }
  ]
}